# eLibrary

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  ReleaseNote.md  eLibraryConfig.cmake.in  vcpkg.json
.github/: FUNDING.yml  codeql.yml  issue_template.md
.github/workflows/: ci.yml
eLibrary/: eLibrary  eLibrary.hpp  nanobench.h
eLibrary/Core/: Assertion.hpp  Collection.hpp  Concurrent.hpp  Constant.hpp  Container.hpp  Exception.hpp  Global.hpp  Mathematics.hpp  Memory.cpp  Memory.hpp  Number.hpp  NumericCollection.hpp  Object.cpp  Object.hpp  String.cpp  String.hpp  StringUnicode.cpp  StringUnicode.hpp  Thread.hpp  Tree.hpp  Type.hpp  WindowsNT.hpp
eLibrary/Extension/: Extension-GeoIP.hpp
eLibrary/IO/: ArchiveStream.hpp  ArchiveUtility.hpp  AudioSegment.hpp  Buffer.hpp  Exception.hpp  FFMpeg.hpp  FastBufferedStream.hpp  File.hpp  FileStream.hpp  IOException.hpp  IOUtility.hpp  Library.hpp  Socket.hpp  Stream.hpp
eLibrary/Multimedia/: AudioSegment.hpp  AudioUtility.hpp  Exception.hpp  MediaException.hpp  MediaUtility.hpp
eLibrary/Network/: Exception.hpp  NetworkException.hpp  NetworkUtility.hpp  Socket.cpp  Socket.hpp
eLibrary/Platform/: Windows.hpp
eLibraryDocumentation/: Doxyfile  doGenerate.bat
eLibraryTest/: CMakeLists.txt  eLibraryTest.cpp
